Refactoring spell checker results to include score